artists alignment fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,17 +2,9 @@
     text-align: center;
     background-color: #282c34;
     color: white;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 .App-header {
@@ -23,19 +15,6 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     /* margin-top: -56px; */
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
 }
 
 .form-control-custom {
